force-app/main/default/objects/Car_Booking__c/Car_Booking__c.object-meta.xml
<CustomObject>
    <label>Car Booking</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>