force-app/main/default/objects/Car_Booking__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Car Bookings</relationshipLabel>
    <relationshipName>Car_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>