force-app/main/default/objects/Car_Booking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Car Bookings</relationshipLabel>
    <relationshipName>Car_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>