force-app/main/default/objects/Car_Booking__c/validationRules/Future_Booking_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Booking_Date</fullName>
    <active>true</active>
    <description>Car booking date must be in future</description>
    <errorConditionFormula>Booking_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Booking_Date__c</errorDisplayField>
    <errorMessage>Car Booking Date Must be of future</errorMessage>
</ValidationRule>